Edit news sections. Add call for paper news. Edit subscribe section to point to Facebook page instead of email.

--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ rightNavigationButtons:
 # Hero Block
 heroImage: "hero.jpg"
 heroTitle: "GDG DevFest <typeout>"
-eventDate: "Ottobre 2017"
+eventDate: "6-7-8 ottobre 2017"
 typeoutTextValues: '"", "Bari", "Season"'
 typeoutFallback: "Bari"
 heroButtons:
@@ -72,43 +72,43 @@ heroButtons:
 # About Block
 aboutTitle: "Cos'è la DevFest?"
 aboutBlock:
- - {title: "Conference", image: "conference.jpg", text: "L'appuntamento di Bari del più grande evento legato alle tecnologie di Google creato con cura artigianale per voi dalla comunità del GDG Bari! Grandi speaker e divertimento!" }
- - {title: "Workshops", image: "workshop.jpg", text: "Una intera giornata di workshop, esperienza sul campo, hacking and debugging. Vieni ed assapora la tua tecnologia preferita!" }
+ - {title: "Conferenza", image: "conference.jpg", text: "L'appuntamento di Bari del più grande evento legato alle tecnologie di Google creato con cura artigianale per voi dalla comunità del GDG Bari! Grandi speaker e divertimento!" }
+ - {title: "Sessioni", image: "workshop.jpg", text: "Una intera giornata di talk, esperienza sul campo, hacking and debugging. Vieni ed assapora la tua tecnologia preferita!" }
  - {title: "Hackathon", image: "hackathon.jpg", text: "Una giornata intera di hackaton free-style! Metti insieme il tuo team e partecipa al hackathon!" }
 
 # Statistic Block
 statisticBlockImage: "statistic.jpg"
 statisticBlock:
 # - {count: "350", specialCharacter: "+", info: "attendees", detail: "from everywhere"}
- - {count: "72", specialCharacter: "+", info: "hours", detail: "di pura Googliness"}
+ - {count: "72", specialCharacter: "+", info: "ore", detail: "di pura Googliness"}
 # TODO: ADD SPEAKERS COUNT HERE
 # - {count: "20", specialCharacter: "+", info: "speakers", detail: "from country and beyond"}
  - {count: "3", specialCharacter: "+", info: "sessioni parallele", detail: "tecniche e pratiche"}
 
 # Latest News Block
-# latestNewsTitle: "Latest news"
+latestNewsTitle: "Ultime news"
 
 # Rockstar Speakers Block
 rockstarSpeakersImage: "rockstar-speakers.jpg"
-rockstarSpeakersCount: 4
+rockstarSpeakersCount: 1
 rockstarSpeakersTitle: "Rockstar speakers"
 rockstarSpeakersButtonText: "See all speakers"
 
 # Location Block
 locationBlockTitle: "Location"
-eventLocationName: "Conference Hall"
-eventLocationLink: "http://cabinet.kinopalace.lviv.ua/showtimes/"
-eventStreetAddress: "22 Teatral'na St"
-eventAddressLocality: "Lviv"
-eventAddressLocalityRegion: "Lvivska"
-eventPostalCode: "79000"
-eventAddressCountry: "Ukraine"
-eventStartTime: "2014-10-25T10:00"
-eventDoorTime: "09:00"
-eventEndTime: "2014-10-25T20:00"
-eventPlaceCoordinates: "49.843237, 24.028751"
-mapCenterCoordinates: "49.842537, 24.025701"
-mapMobileCenterCoordinates: "49.841620, 24.029411"
+eventLocationName: "Politecnico di Bari"
+eventLocationLink: "http://www.poliba.it/"
+eventStreetAddress: "Via Edoardo Orabona,4"
+eventAddressLocality: "Bari"
+eventAddressLocalityRegion: "Puglia"
+eventPostalCode: "70126"
+eventAddressCountry: "Italia"
+#eventStartTime: "2017-10-06T09:00"
+#eventDoorTime: "09:00"
+#eventEndTime: "2017-10-08T20:00"
+eventPlaceCoordinates: "41.109048, 16.8783749"
+mapCenterCoordinates: "41.109048, 16.8783749"
+mapMobileCenterCoordinates: "41.109048, 16.8783749"
 
 # Venue Block
 venueBlockTitle: "Venue"
@@ -116,14 +116,14 @@ venueBigImage: "venue_0.jpg"
 venueSmallImage1: "venue_1.jpg"
 venueSmallImage2: "venue_2.jpg"
 venueSmallImage3: "venue_3.jpg"
-venueTitle: "Kinopalace Cinema"
-venueFeatures: ["3 huge cinema screens", "Doulby Digital Surround EX audio system", "Located directly in the city center"]
+venueTitle: "Politecnico di Bari"
+venueFeatures: ["Il Politecnico di Bari è un’Università pubblica italiana nata nel 1990 con lo scopo di rappresentare un polo di eccellenza internazionale finalizzato al progresso culturale, scientifico e tecnologico."]
 
 # Tweets Feed Block
 tweetsFeedImage: "twitter-feed.jpg"
 tweetsFeedTitle: "What's Up?"
 twitterHashTag: "devfest"
-twitterFeed: "http://lviv.gdg.org.ua/tweetledee/favoritesjson.php?c=10&cache_interval=8000"
+#twitterFeed: "http://lviv.gdg.org.ua/tweetledee/favoritesjson.php?c=10&cache_interval=8000"
 
 # Partners Block
 organizersTitle: "Organizers"
@@ -132,51 +132,51 @@ partnersC4sponsorsButton: "Become a sponsor"
 
 # Subscribe Block
 subscribeImage: "subscribe.jpg"
-subscribeTitle: "Subscribe for updates"
-subscribeAction: "https://gdg.us5.list-manage1.com/subscribe/post?u=9fc8aa205b0521b5f05fc8e1e&amp;id=ae0fb459fc"
-subscribeInfo: "Registration will be open around end of August. Number of tickets are limited. Stay tuned!"
+subscribeTitle: "Stay tuned :)"
+subscribeAction: "https://facebook.com/GDGBari/"
+subscribeInfo: "Seguici su Facebook per più informationi sull'evento!"
 
 # Tickets Block
-ticketsTitle: "Pricetable"
-ticketsInfo: "Tickets grant access to all conference sections, coffee brakes, lunch and party. Accommodation is NOT included in the ticket price."
-ticketsOffers:
- -
-  name: "Early Bird"
-  price: "350"
-  priceCurrency: "UAH"
-  ticketsNumber: "150"
-  ribbon: "-5%"
-  buyButtonLink: "http://dfua.ticketforevent.com/"
-  buyButtonText: "Buy Now"
-  ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
-  validFrom: "2014-08-25T10:00"
-  validThrough: "2014-09-30T23:59"
- -
-  name: "Last Chance"
-  price: "450"
-  priceCurrency: "UAH"
-  ticketsNumber: "100"
-  ribbon: "-20%"
-  featured: true
-  buyButtonLink: "http://dfua.ticketforevent.com/"
-  buyButtonText: "Buy Now"
-  ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
-  validFrom: "2014-10-01T00:00"
-  validThrough: "2014-10-23T23:59"
-  disabled: true
- -
-  name: "Student"
-  price: "200"
-  priceCurrency: "UAH"
-  ticketsNumber: "50"
-  buyButtonLink: "http://dfua.ticketforevent.com/"
-  buyButtonText: "Buy Now"
-  additionalInfo: "Requires a valid student ID at the conference check in. Without student ID at the check in, ticket will be cancelled without refund"
-  ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
-  validFrom: "2014-08-20T10:00"
-  validThrough: "2014-10-23T23:59"
-  soldOut: true
-  soldOutText: "Sold Out"
+ticketsTitle: "Biglietti"
+ticketsInfo: "Coming soon..."
+#ticketsOffers:
+# -
+#  name: "Early Bird"
+#  price: "350"
+#  priceCurrency: "UAH"
+#  ticketsNumber: "150"
+#  ribbon: "-5%"
+#  buyButtonLink: "http://dfua.ticketforevent.com/"
+#  buyButtonText: "Buy Now"
+#  ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
+#  validFrom: "2014-08-25T10:00"
+#  validThrough: "2014-09-30T23:59"
+#-
+#  name: "Last Chance"
+#  price: "450"
+#  priceCurrency: "UAH"
+#  ticketsNumber: "100"
+#  ribbon: "-20%"
+#  featured: true
+#  buyButtonLink: "http://dfua.ticketforevent.com/"
+#  buyButtonText: "Buy Now"
+#  ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
+#  validFrom: "2014-10-01T00:00"
+#  validThrough: "2014-10-23T23:59"
+#  disabled: true
+# -
+#  name: "Student"
+#  price: "200"
+#  priceCurrency: "UAH"
+#  ticketsNumber: "50"
+#  buyButtonLink: "http://dfua.ticketforevent.com/"
+#  buyButtonText: "Buy Now"
+#  additionalInfo: "Requires a valid student ID at the conference check in. Without student ID at the check in, ticket will be cancelled without refund"
+#  ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
+#  validFrom: "2014-08-20T10:00"
+#  validThrough: "2014-10-23T23:59"
+#  soldOut: true
+#  soldOutText: "Sold Out"
 
 # Footer
 socialLinks:
