--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ title: "GDG DevFest Bari 2017"
 # email: "mikelantonio.trizio@gmail.com"
 description: "GDG DevFest Bari 2017"
 baseurl: "/"
-url: "https://gdgbari.github.io"
+url: "https://gdgbari.org"
 permalink: "/blog/:title"
 googleAnalyticsTrackingId: "UA-55641503-2"
 googleAnalyticsSiteUrl: "gdgbari.org"
