--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1,50 +1,67 @@
-- 
-  date: "2014-10-24"
-  dateReadable: "October 24"
-  tracks: 
-    - {title: "Android", color: "#90be4e"}
-    - {title: "Web & Cloud", color: "#03a9f4"}
-    - {title: "Community", color: "#e91e63"}
+-
+  date: "2017-10-06"
+  dateReadable: "Mattina"
   timeslots:
     - {
-    	startTime: "10:00",
-    	endTime: "10:45",
-    	sessionIds: [002, 003, 004]
+    	startTime: "9:00",
+    	endTime: "10:00",
+    	sessionIds: [018]
     }
     - {
-        startTime: "11:00",
-        endTime: "11:45",
-        sessionIds: [003, 404, 004]
-    }
-    - {
-    	startTime: "12:00",
-    	endTime: "11:45",
-    	sessionIds: [307]
-    }
-- 
-  date: "2014-10-25"
-  dateReadable: "October 25"
-  tracks: 
-    - {title: "Android", color: "#90be4e"}
-    - {title: "Web & Cloud", color: "#03a9f4"}
-  timeslots: 
-    - {
-    	startTime: "10:00",
-    	endTime: "10:45",
-    	sessionIds: [404, 002]
+        startTime: "10:00",
+        endTime: "11:00",
+        sessionIds: [019]
     }
     - {
     	startTime: "11:00",
     	endTime: "11:45",
-    	sessionIds: [002, 003]
+    	sessionIds: [020]
     }
     - {
-        startTime: "13:00",
-        endTime: "13:45",
-        sessionIds: [003]
+    	startTime: "11:45",
+    	endTime: "12:00",
+    	sessionIds: [016]
     }
+    - {
+    	startTime: "12:00",
+    	endTime: "13:00",
+    	sessionIds: [014, 005]
+    }
+    - {
+    	startTime: "13:00",
+    	endTime: "14:45",
+    	sessionIds: [007, 008]
+    }
+-
+  date: "2017-10-06"
+  dateReadable: "Pomeriggio"
+  tracks:
+    - {title: "Mobile", color: "#90be4e"}
+    - {title: "Web", color: "#03a9f4"}
+    - {title: "IoT & BigData", color: "#e91e63"}
+  timeslots:
     - {
     	startTime: "14:00",
     	endTime: "15:00",
-    	sessionIds: [503]
+    	sessionIds: [003, 015, 012]
+    }
+    - {
+    	startTime: "15:00",
+    	endTime: "15:45",
+    	sessionIds: [001, 009, 010]
+    }
+    - {
+        startTime: "15:45",
+        endTime: "16:00",
+        sessionIds: [016]
+    }
+    - {
+        startTime: "16:00",
+        endTime: "17:00",
+        sessionIds: [013, 011, 017]
+    }
+    - {
+    	startTime: "17:00",
+    	endTime: "18:00",
+    	sessionIds: [002, 004, 006]
     }
