--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -70,9 +70,9 @@ Attualmente lavoro nel settore e-commerce per Stentle SRL  come fullstack develo
   #company: "Google Poland"
   #title: "Developer Relations Program Manager"
   bio: "Studente magistrale in Ingegneria Informatica presso il Politecnico di Bari.
-  Collaboro a progetti di ricerca riguardanti Semantic Web e tematiche legate all'ingegneria del software applicata alle tematiche connesse con l'Internet of Things.
-  Lavoro come Ingegnere del Software presso una azienda che si occupa di R&D in ambito industriale.
-  Sono appassionato di tecnologia, innovazione e ricerca in ambito di sicurezza informatica, open data, intelligenza artificiale e prototipazione IoT."
+Collaboro a progetti di ricerca riguardanti Semantic Web e tematiche legate all'ingegneria del software applicata all'Internet delle Cose.
+Lavoro come Ingegnere del Software presso una azienda che si occupa di R&D in ambito industriale.
+Sono appassionato di tecnologia, innovazione e ricerca in ambito di sicurezza informatica, open data, intelligenza artificiale e prototipazione IoT."
   thumbnailUrl: angelo-parchitelli.jpg
   rockstar: true
   social:
