--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -199,3 +199,13 @@ Ama profondamente i sistemi distribuiti, la cache server-side, Redis e tecniche 
   social:
     - {name: "linkedin", link: "https://www.linkedin.com/in/giuseppesantoroapuliasoft/"}
     - {name: "facebook", link: "https://www.facebook.com/giuseppesantoroitalia"}
+-
+  id: 15
+  name: "Sara"
+  surname: "Di Bartolomeo"
+  #company: "Spindox"
+  #title: "Developer Relations Program Manager"
+  bio: "I'm a software engineering student by day, and a painter by night. I try to mix art and algorithms in an attempt to get this two parts of me together.
+I like sharing my knowledge, and finding all sorts of ways to get people interested. For this purpose, I taught coding courses to children, organized workshops, and keep up a strong passion in open source software. I also like parrots."
+  thumbnailUrl: sara-di-bartolomeo.jpg
+  rockstar: true
